# llm-finetune-cpu

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  smoke.yaml
data/augmented/: aug_struc_to_diverse.py  augmented.jsonl  augmented_structured.jsonl
data/hard_test/: hard_edge_cases_intent_markdown.md  hard_test.jsonl
data/manual/: fine_tuning_intent_examples_markdown.md  manual.jsonl
scripts/: run_train.sh
src/llm_finetune/: __init__.py  __main__.py  cli.py  config.py  data.py  inference.py  metrics.py  modeling.py  training.py
tests/: test_data.py
